# Vython

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: calidad.md  ejemplos.md  gramatica-natural.md  ia.md  importacion.md  instalacion.md  introduccion.md  privacidad-ia.md  roadmap.md  sintaxis.md  vscode.md
ejemplos/: bucles.ny  condicionales.ny  error_nombre.ny  funciones.ny  gramatica_natural.ny  hola_mundo.ny  ia_simulada.ny  importar_modulo.ny  listas.ny  matematicas.ny
nython/: __init__.py  alias.py  cli.py  ejecutor.py  errores.py  ia.py  importador.py  traductor.py  utilidades.py
tests/: test_alias.py  test_cli.py  test_ejecutor.py  test_errores.py  test_ia.py  test_traductor.py
vscode-extension/: .vscodeignore  README.md  extension.js  package.json
vscode-extension/snippets/: nython.json
vscode-extension/syntaxes/: nython.tmLanguage.json
