[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nython"
version = "0.1.0"
description = "Programa en espanol. Ejecuta en Python."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Nython contributors" }
]
keywords = ["python", "spanish", "education", "transpiler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
nython = "nython.cli:main"

[project.optional-dependencies]
dev = ["pytest"]
ia = ["openai"]

[tool.setuptools.packages.find]
include = ["nython*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
