[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nython"
version = "0.2.0"
description = "Programa en espanol. Ejecuta en Python."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Nython contributors" }
]
keywords = ["python", "spanish", "education", "transpiler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/vmguzman809-beep/Vython"
Repository = "https://github.com/vmguzman809-beep/Vython"
Issues = "https://github.com/vmguzman809-beep/Vython/issues"
Documentation = "https://github.com/vmguzman809-beep/Vython/tree/main/docs"

[project.scripts]
nython = "nython.cli:main"

[project.optional-dependencies]
dev = ["coverage[toml]", "pytest", "ruff"]
ia = ["openai"]

[tool.setuptools.packages.find]
include = ["nython*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B904"]

[tool.coverage.run]
source = ["nython"]

[tool.coverage.report]
show_missing = true
skip_covered = true
